# giza-cyber-shield

./: .bash_history  .dockerignore  .dockerignore.dashboard  .dockerignore.go.backup  .env  .env.example  .env.vercel  .flyignore  .gitconfig  .gitignore  .mcp.json  .sonarignore  .temp-tsconfig-1770649347941-7msmoritx.json  .vercelignore  BOTTOM_UP_AUDIT.md  BUILD_STATUS.md  BUILD_TAG_ARCHITECTURE.md  BUILD_TELEMETRY_CONTAINER.md  CHANGELOG.md  CLOUDFLARE_WORKER_FILES_REVIEW.md  COMMERCIAL_DEPLOYMENT_GUIDE.md  COMMIT_MESSAGE.txt  COMMUNITY_TELEMETRY_STRATEGY.md  COMPLETE_UPLOAD_LIST.md  COMPLIANCE_LIBRARY_ONE_PAGER.md  COMPREHENSIVE_PROJECT_DELIVERY_SCAN_2026-01-18.md  COMPREHENSIVE_STIG_SYSTEM_COMPLETE.md  CURRENT_STATUS_2026-01-05.md  DAG_INTEGRATION_COMPLETE.md  DEMO_COMMANDS.txt  DEMO_QUICK_REFERENCE.md  DEMO_QUICK_REFERENCE_CARD.md  DEMO_REHEARSAL_GUIDE.md  DEMO_SETUP_GUIDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEV_SPRINT_AUDIT_TRL10_ANALYSIS.md  DG02_PQC_LICENSING_COMPLETION.md  (+262 more)
.github/: dependabot.yml  (+1 more)
pkg/tnok/tnok/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE.txt  README.md  cspell.json  pyproject.toml  setup.cfg
pkg/tnok/tnok/docker/: Dockerfile  build.sh  compose.yml
pkg/tnok/tnok/docker/builder/: Dockerfile
pkg/tnok/tnok/requirements/: README.md  requirements-dev.txt  requirements-legacy.txt  requirements.txt
pkg/tnok/tnok/scripts/: build.sh  clean.sh  docker_build.sh  docker_precommit.sh  docker_test.sh  legacy_build.bat  logging.sh  precommit.sh  pyinstaller_build.py
pkg/tnok/tnok/scripts/automated_tests/: automated_tests.sh  tnok_client.sh  utils.sh
pkg/tnok/tnok/src/tnok/: __init__.py  __main__.py
pkg/tnok/tnok/src/tnokd/: __init__.py  __main__.py  config.py  db.py  errors.py  firewall.py  models.py  service.py  sniffer.py
pkg/tnok/tnok/src/tnoklib/: __init__.py  nok.py  pkt.py
pkg/tnok/tnok/tnokd/: __init__.py  __main__.py  lorentz.py
(+3608 files in other folders)
