[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tnokd"
version = "0.1.0"
description = "Tnok Stealth Gateway daemon with Lorentz-Invariant Timestamping"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
